<resources>
    <string name="app_name">TempProject</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="finish_registration">Finish registration</string>
    <string name="finish_login">Finish login</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="settings_name">name</string>
    <string name="settings_profile">steam_profile</string>
    <string name="settings_confirm">Confirm changes</string>
    <string name="matches_button">Matches</string>
    <string name="send_message">send</string>
    <string name="message_hint">message</string>
    <string name="user_message">users message</string>
    <string name="set_games">Set games</string>
    <string name="choose_game">Choose the game</string>
</resources>
