<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_4"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_gravity="center"
        android:id="@+id/profileImage"
        android:src="@mipmap/ic_launcher"
        android:layout_marginBottom="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_name"
        android:background="@drawable/edit_text_background"
        android:hint="@string/settings_name"
        android:layout_marginBottom="20sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings_profile"
        android:background="@drawable/edit_text_background"
        android:hint="@string/settings_profile"
        android:layout_marginBottom="20sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_4"
        android:id="@+id/settings_confirm_button"
        android:text="@string/settings_confirm"
        />

</LinearLayout>