<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_5"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logoutUser"
        android:text="@string/sign_out"
        android:background="@drawable/custom_button_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToSettings"
        android:background="@drawable/custom_button_4"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_4"
        app:rotation_degrees="15.5"
        tools:context=".MyActivity"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/matches_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:background="@drawable/custom_button_4"
        android:onClick="goToMatches"
        android:text="@string/matches_button"
        app:layout_constraintEnd_toEndOf="@+id/frame"
        app:layout_constraintStart_toStartOf="@+id/frame"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/choose_game_button"
        android:layout_width="wrap_content"
        android:background="@drawable/custom_button_4"
        android:layout_height="wrap_content"
        android:text="@string/choose_game"
        android:onClick="goToChooseGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
