<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_6"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_marginTop="100sp"
        android:layout_marginLeft="105sp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/gamer_tinder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50sp"
        android:orientation="vertical">
        <EditText
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:id="@+id/loging_in_email"
            />
        <EditText
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:id="@+id/loging_in_password"
            />

        <Button
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_login"
            android:id="@+id/loging_in_finish_button"
            android:background="@drawable/custom_button_3"
            />
    </LinearLayout>

</RelativeLayout>